--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
@@ -15,8 +15,9 @@ unicode_script = "devanagari"
 
 वागर्थाव् इव सम्पृक्तौ  
 वागर्थ-प्रतिपत्तये ।  
-जगतः पितरौ वन्दे  
+**जगतः पितरौ वन्दे**  
 पार्वती-परमेश्वरौ ॥ १ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/01.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -27,8 +28,9 @@ unicode_script = "devanagari"
 
 क्व सूर्य-प्रभवो वंशः  
 क्व चाल्पविषया मतिः ।  
-तितीर्षुर् दुस्तरम् मोहाद्  
+**तितीर्षुर्** दुस्तरम् **मोहाद्**  
 उडुपेनास्मि सागरम् ॥ २ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/02.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -38,9 +40,10 @@ unicode_script = "devanagari"
 
 
 मन्दः कवियशः प्रार्थी  
-गमिष्याम्य् उपहास्यताम् ।  
+**गमिष्याम्य् उपहास्यताम्** ।  
 प्रांशुलभ्ये फले लोभाद्  
 उद्बाहुर् इव वामनः ॥ ३ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/03.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -52,7 +55,8 @@ unicode_script = "devanagari"
 अथ वा कृत-वाग्-द्वारे  
 वंशेऽस्मिन् पूर्व-सूरिभिः ।  
 मणौ वज्र-समुत्कीर्णे  
-सूत्रस्येवास्ति मे गतिः ॥ ४ ॥    
+**सूत्रस्येवास्ति मे गतिः** ॥ ४ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/04.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -65,6 +69,7 @@ unicode_script = "devanagari"
 आफलोदय-कर्मणाम् ।  
 आसमुद्र-क्षितीशानाम्  
 आनाक-रथ-वर्त्मनाम् ॥ ५ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/05.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -77,6 +82,7 @@ unicode_script = "devanagari"
 यथाकामार्चितार्थिनाम् ।  
 यथापराधदण्डानाय्ँ  
 यथाकाल-प्रभोधिनाम् ॥ ६ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/06.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -89,6 +95,7 @@ unicode_script = "devanagari"
 सत्याय मितभाषिणाम् ।  
 यशसे विजिगीषुणाम्  
 प्रजायै गृह-मेन्धिनाम् ॥ ७ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/07.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -101,6 +108,7 @@ unicode_script = "devanagari"
 यौवने विषयैषिणाम् ।  
 वार्धके मुनिवृत्तीनाय्ँ  
 योगेनान्ते तनुत्यजाम् ॥ ८ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/08.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -109,10 +117,11 @@ unicode_script = "devanagari"
 </div>
 
 
-रघूणाम् अन्वयव्ँ वक्ष्ये  
+**रघूणाम् अन्वयव्ँ वक्ष्ये**  
 तनुवाग्-विभवोऽपि सन् ।  
 तद्गुणैः कर्णमागत्य  
 चापलाय प्रचोदितः ॥ ९ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/09.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -134,9 +143,9 @@ unicode_script = "devanagari"
 
 
 ## मनुः
-वैवसतो मनुर् नाम  
+वैवसतो **मनुर्** नाम  
 माननीयो मनीषिणाम् ।  
-आसीन् महीक्षिताम् आद्यः  
+**आसीन्** महीक्षिताम् आद्यः  
 प्रणवश् छन्दसाम् इव ॥ ११ ॥+++(र५)+++    
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/11.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -150,9 +159,9 @@ unicode_script = "devanagari"
 ### तद्गुणाः
 +++(र५)+++
 
-तदन्वये शुद्धिमति  
-प्रसूतः शुद्धिमत्तरः ।  
-दिलीप इति राजेन्दुर्  
+तद्-अन्वये शुद्धिमति  
+**प्रसूतः** शुद्धिमत्तरः ।  
+**दिलीप** इति राजेन्दुर्  
 इन्दुः क्षीरनिधाविव ॥ १२ ॥    
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/12.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -164,8 +173,9 @@ unicode_script = "devanagari"
 
 व्यूढोरस्को वृषस्कन्धः  
 शाल-प्रांशुर् महाभुजः ।  
-आत्म-कर्म-क्षमन् देहङ्  
-क्षात्रो धर्म इवाश्रितः ॥ १३ ॥    
+आत्म-कर्म-क्षमन् **देहङ्**  
+**क्षात्रो धर्म इवाश्रितः** ॥ १३ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/13.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -176,8 +186,9 @@ unicode_script = "devanagari"
 
 सर्वातिरिक्त-सारेण  
 सर्व-तेजोऽभिभाविना ।  
-स्थितः सर्वोन्नतेनोर्वीङ्  
-क्रान्त्वा मेरुर् इवात्मना ॥ १४ ॥    
+**स्थितः** सर्वोन्नतेनोर्वीङ्  
+**क्रान्त्वा** मेरुर् इवात्मना+++(=शरीरेण)+++ ॥ १४ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/14.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -189,7 +200,8 @@ unicode_script = "devanagari"
 आकार-सदृश-प्रज्ञः  
 प्रज्ञया सदृशागमः ।  
 आगमैः सदृशारम्भ  
-आरम्भसदृशोदयः ॥ १५ ॥    
+आरम्भसदृशोदयः ॥ १५ ॥ +++(5)+++   
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/15.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -199,9 +211,10 @@ unicode_script = "devanagari"
 
 
 भीमकान्तैर् नृपगुणैः  
-स भभूवोपजीविनाम् ।  
-अधृष्यश् चाभिगम्यश् च  
+**स भभूवोपजीविनाम्** ।  
+**अधृष्यश् चाभिगम्यश्** च  
 याधो-रत्नैर् इवार्णवः ॥ १६ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/16.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -211,9 +224,10 @@ unicode_script = "devanagari"
 
 
 रेखामात्रम् अपि क्षुण्णाद्  
-आ मनोर्वर्त्मनः परम् ।  
-न व्यतीयुः प्रजास् तस्य  
+आ मनोर् वर्त्मनः परम् ।  
+**न व्यतीयुः प्रजास्** तस्य  
 नियन्तुर् नेमि-वृत्तयः ॥ १७ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/17.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -223,9 +237,10 @@ unicode_script = "devanagari"
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-18-25.mp3"></div>
 
 प्रजानाम् एव भूत्यर्थं  
-स ताभ्यो बलिमग्रहीत् ।  
-सहस्र-गुणम् उत्स्रष्टुम्  
+स ताभ्यो **बलिम् अग्रहीत्** ।  
+सहस्र-गुणम् **उत्स्रष्टुम्**  
 आदत्ते हि रसं रविः ॥ १८ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/18.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -235,9 +250,10 @@ unicode_script = "devanagari"
 
 
 सेना परिच्छदस् तस्य,  
-+++(यतः -)+++ द्वयम् एवार्थ-साधनम् ।  
++++(यतः -)+++ **द्वयम् एवार्थ-साधनम्** ।  
 शास्त्रेष्व् अकुण्ठिता बुद्धिर्,  
-मौर्वी धनुषि चातता ॥ १९ ॥    
+मौर्वी धनुषि चातता ॥ १९ ॥ +++(5 Deterrance!)+++    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/19.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -248,8 +264,9 @@ unicode_script = "devanagari"
 
 तस्य सव्ँवृत-मन्त्रस्य  
 गूढाकारेङ्गितस्य च ।  
-फलानुमेयाः प्रारम्भाः  
+**फलानुमेयाः प्रारम्भाः**  
 संस्काराः प्राक्तना इव ॥ २० ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/20.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -258,10 +275,11 @@ unicode_script = "devanagari"
 </div>
 
 
-जुगोपात्मानम् अत्रस्तो  
-भेजे धर्मम् अनातुरः ।  
-अगृध्नुर् आददे सोऽर्थम्  
-असक्तः सुखमन्वभूत् ॥ २१ ॥    
+**जुगोपात्मानम्** अत्रस्तो  
+**भेजे धर्मम्** अनातुरः ।  
+अगृध्नुर् **आददे सोऽर्थम्**  
+असक्तः **सुखम् अन्वभूत्** ॥ २१ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/21.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -270,10 +288,11 @@ unicode_script = "devanagari"
 </div>
 
 
-ज्ञाने मौनङ् क्षमा शक्तौ  
+ज्ञाने मौनङ्, क्षमा शक्तौ,  
 त्यागे श्लाघा-विपर्ययः ।  
 गुणा गुणानुबन्धित्वात्  
 तस्य सप्रसवा इव ॥ २२ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/22.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -283,9 +302,10 @@ unicode_script = "devanagari"
 
 
 अनाकृष्टस्य विषयैर्  
-विद्यानाम् पारदृश्वनः ।  
-तस्य धर्म-रतेर् आसीद्  
-वृद्धत्वञ् जरसा विना ॥ २३ ॥    
+विद्यानाम् पार-दृश्वनः ।  
+तस्य धर्म-रतेर् **आसीद्**  
+**वृद्धत्वञ्** जरसा विना ॥ २३ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/23.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -296,8 +316,9 @@ unicode_script = "devanagari"
 
 प्रजानाव्ँ विनयाधानाद्  
 रक्षणाद् भरणाद् अपि ।  
-स पिता पितरस् तासाङ्  
+**स पिता**, पितरस् तासाङ्  
 केवलञ् जन्म-हेतवः ॥ २४ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/24.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -306,10 +327,11 @@ unicode_script = "devanagari"
 </div>
 
 
-स्थित्यै दण्डयतो दण्ड्यान्  
+स्थित्यै दण्डयतो दण्ड्यान्,  
 परिणेतुः प्रसूतये ।  
-अप्य् अर्थकामौ तस्यास्तान्  
-धर्म एव मनीषिणः ॥ २५ ॥    
+अप्य् **अर्थकामौ** तस्यास्तान्  
+**धर्म एव** मनीषिणः ॥ २५ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/25.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -318,10 +340,11 @@ unicode_script = "devanagari"
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-26-50.mp3"></div>
 
-दुदोह गां स यज्ञाय  
+**दुदोह गां** स यज्ञाय  
 सस्याय मघवा दिवम् ।  
 सम्पद्-विनिमयेनोभौ  
-दधतुर् भुवनद्वयम् ॥ २६ ॥    
+**दधतुर् भुवनद्वयम्** ॥ २६ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/26.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -330,10 +353,11 @@ unicode_script = "devanagari"
 </div>
 
 
-न किलानुययुस् तस्य  
+**न किलानुययुस्** तस्य  
 राजानो रक्षितुर् यशः ।  
 +++(प्रजा)+++ व्यावृत्ता यत् पर-स्वेभ्यः,  
 श्रुतौ तस्करता स्थिता ॥ २७ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/27.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -342,10 +366,11 @@ unicode_script = "devanagari"
 </div>
 
 
-द्वेष्योऽपि सम्मतः शिष्टस्  
+द्वेष्योऽपि **सम्मतः शिष्टस्**  
 तस्यार्तस्य यथौषधम् ।  
-त्याज्यो दुष्टः प्रियोऽप्य् आसीद्  
-अङ्गुलीवोरग-क्षता ॥ २८ ॥    
+**त्याज्यो दुष्टः** प्रियोऽप्य् आसीद्  
+अङ्गुलीवोरग-क्षता ॥ २८ ॥ 
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/28.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -354,10 +379,11 @@ unicode_script = "devanagari"
 </div>
 
 
-तव्ँ वेधा विदधे नूनम्  
+तव्ँ **वेधा विदधे** नूनम्  
 महाभूत-समाधिना ।  
-तथा हि सर्वे तस्यासन्  
-परार्थैक-फला गुणाः ॥ २९ ॥    
+तथा हि सर्वे **तस्यासन्**  
+**परार्थैक-फला गुणाः** ॥ २९ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/29.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -368,8 +394,9 @@ unicode_script = "devanagari"
 
 स वेला-वप्र+++(=प्राकार)+++-वलयाम्  
 परिखी-कृत-सागराम् ।  
-अनन्याशासनाम् ऊर्वीं  
-शशासैक-पुरीम् इव ॥ ३० ॥    
+अनन्य-शासनाम् ऊर्वीं  
+**शशासैक-पुरीम् इव** ॥ ३० ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/30.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -382,8 +409,9 @@ unicode_script = "devanagari"
 
 तस्य दाक्षिण्य+++(=परच्छन्दानुवर्त्तित्व)+++-रुढेन  
 नाम्ना मगध-वंश-जा ।  
-पत्नी सुदक्षिणेत्य् आसीद्  
+**पत्नी** सुदक्षिणेत्य् **आसीद्**  
 अध्वरस्येव दक्षिणा ॥ ३१ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/31.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -392,10 +420,11 @@ unicode_script = "devanagari"
 </div>
 
 
-कलत्रवन्तम् आत्मानम्  
+**कलत्रवन्तम् आत्मानम्**  
 अवरोधे महत्य् अपि ।  
-तया मेने मनस्विन्या  
+तया **मेने** मनस्विन्या  
 लक्ष्म्या च वसुधाधिपः ॥ ३२ ॥+++(र५)+++    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/32.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -409,8 +438,9 @@ unicode_script = "devanagari"
 
 तस्याम् आत्मानुरूपायाम्  
 आत्म-जन्म-समुत्सुकः ।  
-विलम्बित-फलैः कालं  
-स निनाय मनोरथैः ॥ ३३ ॥+++(र५)+++    
+विलम्बित-फलैः **कालं**  
+**स निनाय** मनोरथैः ॥ ३३ ॥+++(र५)+++    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/33.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -420,9 +450,10 @@ unicode_script = "devanagari"
 
 
 सन्तानार्थाय विधये  
-स्वभुजाद् अवतारिता ।  
-तेन धूर् जगतो गुर्वी  
-सचिवेषु निचिक्षिपे ॥ ३४ ॥    
+स्व-भुजाद् अवतारिता ।  
+तेन **धूर्** जगतो गुर्वी  
+सचिवेषु **निचिक्षिपे** ॥ ३४ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/34.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -433,13 +464,14 @@ unicode_script = "devanagari"
 
 गङ्गाम् भगीरथेनेव  
 पूर्वेषाम् पावनक्षमाम् ।  
-इच्छता सन्ततिन् न्यस्ता  
-तेन मन्त्रिषु कोसला ॥ ३४* ॥+++(र५)+++  
+इच्छता सन्ततिन् **न्यस्ता**  
+तेन मन्त्रिषु **कोसला** ॥ ३४* ॥+++(र५)+++  
 
 अथाभ्यर्च्य विधातारम्  
 प्रयतौ पुत्रकाम्यया ।  
 तौ दम्पती वसिष्ठस्य  
-गुरोर् जग्मतुर् आश्रमम् ॥ ३५ ॥    
+गुरोर् **जग्मतुर् आश्रमम्** ॥ ३५ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/35.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -452,9 +484,10 @@ unicode_script = "devanagari"
 +++(र५)+++
 
 स्निग्ध-गम्भीर-निर्घोषम्  
-एकं स्यन्दनम् आस्थितौ ।  
+एकं **स्यन्दनम् आस्थितौ** ।  
 प्रावृषेण्यं+++(=प्रावृषि भवम्)+++ पयोवाहव्ँ  
 विद्युद्-ऐरावताव् इव ॥ ३६ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/36.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -464,9 +497,10 @@ unicode_script = "devanagari"
 
 
 मा भूद् आश्रम-पीडेति  
-परिमेय-पुरःसरौ ।  
+**परिमेय-पुरःसरौ** ।  
 अनुभाव+++(→तेजो)+++-विशेषात् तु  
 सेना-परिवृताव् इव ॥ ३७ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/37.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -475,10 +509,11 @@ unicode_script = "devanagari"
 </div>
 
 
-सेव्यमानौ सुख-स्पर्शैः  
+**सेव्यमानौ** सुख-स्पर्शैः  
 शाल-निर्यास+++(=निस्यन्द)+++-गन्धिभिः ।  
-पुष्प-रेणूत्किरैर् वातैर्  
+पुष्प-रेणूत्किरैर् **वातैर्**  
 आधूत-वन-राजिभिः ॥ ३८ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/38.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -487,10 +522,11 @@ unicode_script = "devanagari"
 </div>
 
 
-मनोऽभिरामाः शृण्वन्तौ  
+मनोऽभिरामाः **शृण्वन्तौ**  
 रथनेमि-स्वनोन्मुखैः ।  
-षड्ज-सव्ँवादिनीः केका  
+षड्ज-सव्ँवादिनीः **केका**  
 द्विधा भिन्नाः शिखण्डिभिः ॥ ३९ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/39.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -499,10 +535,11 @@ unicode_script = "devanagari"
 </div>
 
 
-परस्पराक्षि-सादृश्यम्  
-अदूरोज्झित-वर्त्मसु ।  
-मृग-द्वन्द्वेषु पश्यन्तौ  
+**परस्पराक्षि-सादृश्यम्**  
+अ-दूरोज्झित-वर्त्मसु ।  
+मृग-द्वन्द्वेषु **पश्यन्तौ**  
 स्यन्दनाबद्ध-दृष्टिषु ॥ ४० ॥  +++(5)+++  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/40.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -511,8 +548,11 @@ unicode_script = "devanagari"
 </div>
 
 
-श्रेणीबन्धाद्वितन्वद्भिरस्तम्भान् तोरणस्रजम् ।  
-सारसैः कलनिर्ह्राधैः क्वचिदुन्नमिताननौ ॥ ४१ ॥    
+श्रेणी-बन्धाद् वितन्वद्भिर्  
+अ-स्तम्भान् तोरणस्रजम् ।  
+सारसैः **कल-निर्ह्राधैः**  
+क्वचिद् **उन्नमिताननौ** ॥ ४१ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/41.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -521,8 +561,11 @@ unicode_script = "devanagari"
 </div>
 
 
-पवनस्यानुकूलत्वात्प्रार्थनासिद्धिशंसिनः ।  
-रजोभिस्तुरगोत्कीर्णैरस्पृष्टालकवेष्टनौ ॥ ४२ ॥    
+पवनस्यानुकूलत्वात्  
+प्रार्थना-सिद्धि-शंसिनः ।  
+**रजोभिस्** तुरगोत्कीर्णैर्  
+**अस्पृष्टालक-वेष्टनौ** ॥ ४२ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/42.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -531,8 +574,11 @@ unicode_script = "devanagari"
 </div>
 
 
-सरसीष्वरविन्दानाव्ँ वीचिविक्षोभशीतलम् ।  
-आमोदम् उपजिघ्रन्तौ स्वनिःश्वासानुकारिणम् ॥ ४३ ॥    
+सरसीष्व् अरविन्दानाव्ँ  
+वीचि-विक्षोभ-शीतलम् ।  
+**आमोदम् उपजिघ्रन्तौ**  
+स्वनिःश्वासानुकारिणम् ॥ ४३ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/43.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -541,8 +587,11 @@ unicode_script = "devanagari"
 </div>
 
 
-ग्रामेष्वात्मविषृटेषु यूपचिह्नेषु यज्वनाम् ।  
-अमोघाः प्रतिगृह्णन्तावर्घ्यानुपदम् आशिषः ॥ ४४ ॥    
+ग्रामेष्व् आत्मविसृष्टेषु  
+यूपचिह्नेषु यज्वनाम् ।  
+अमोघाः **प्रतिगृह्णन्ताव्**  
+अर्घ्यानुपदम् **आशिषः** ॥ ४४ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/44.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -551,8 +600,11 @@ unicode_script = "devanagari"
 </div>
 
 
-हैयङ्गवीनम् आदाय घोषवृद्धान् उपस्थितान् ।  
-नामधेयानि पृच्छन्तौ वन्यानाम् मार्गशाखिनाम् ॥ ४५ ॥    
+हैयङ्गवीनम्+++(=ह्यस्तनगोदोहोद्भवं घृतं)+++ आदाय  
+घोष-वृद्धान् उपस्थितान् ।  
+**नाम-धेयानि पृच्छन्तौ**  
+वन्यानाम् मार्गशाखिनाम् ॥ ४५ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/45.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -561,20 +613,26 @@ unicode_script = "devanagari"
 </div>
 
 
-काप्यभिख्या तयोरासीद् व्रजतोः शुद्धवेषयोः ।  
-हिमनिर्मुक्तयोर् योगे चित्राचन्द्रमसोरिव ॥ ४६ ॥    
+काप्य् **अभिख्या** तयोर् **आसीद्**  
+व्रजतोः शुद्ध-वेषयोः ।  
++++(शिशिरान्तर्गत-)+++हिम-निर्मुक्तयोर् योगे +++(चैत्रमास-पूर्णिमायां)+++  
+चित्रा-+++(पूर्ण-)+++चन्द्रमसोर् इव ॥ ४६ ॥    
+
++++(अपि चैत्रमासपूर्णिमायां चित्रा-पूर्णचन्द्रयोर् योगः केनचिद् दृष्टः? कालिदासोक्ताभिख्या ऽनुभूता??)+++
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/46.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
-हैयंगवीनमिति॥ ह्यस्तनगोदोहोद्भवं घृतं हैयंगवीनम्। ह्यः पूर्वेद्युर्भवम्। 'तत्तु हैयंगवीनं यद्ध्योगोदोहोद्भवं घृतम्' इत्यमरः। 'हैयंगवीनं संज्ञायाम्' (पा.2।2।23) इति निपातः। तत्सद्योघृतम्। आदायोपस्थितान्घोषवृद्धान्। 'घोष आभीरपल्ली स्यात्' इत्यमरः। वन्यानां मार्गशाखिनां नामधेयानि पृच्छन्तौ। 'दुह्याच्-'(वा.1090,1100) इत्यादिना पृच्छतेर्द्विकर्मकत्वम्। कुलकम्॥ 45 ॥  
-काप्यभिख्या तयोरासीद्व्रजतोः शुद्धवेषयोः ।  
-हिमनिर्मुक्तयोर्योगे चित्राचन्द्रमसोरिव ॥ 46 ॥
+कापीति। व्रजतोर्गच्छतोः शुद्धवेषयोरुज्ज्वलनेपथ्ययोः तयोः सुदक्षिणादिलीपयोः। हिमनिर्मुक्तयोश्चित्राचन्द्रमसोरिव। योगे सति काप्यनिर्वाच्याऽभिख्या शोभाऽ।ञसीत्। 'अभिख्या नामशोभयोः' इत्यमरः। 'आतश्चोपसर्गे' (पा.3।3।106) इत्यङ्प्रत्ययः। चित्रा नक्षत्रविशेषः। शिशिरापगमे चैत्र्यां चित्रापूर्णचन्द्रमसोरिवेत्यर्थः ॥ 46 ॥
 </details>
 </div>
 
 
-तत्तद्भूमिपतिः पत्न्यै दर्शयन्प्रियदर्शनः ।  
-अपि लङ्घितमध्वानम् बुबुधे न बुधोपमः ॥ ४७ ॥    
+तत्-तद्-भूमिपतिः पत्न्यै  
+**दर्शयन्** प्रिय-दर्शनः ।  
+अपि लङ्घितम् **अध्वानम्**  
+**बुबुधे न** बुधोपमः ॥ ४७ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/47.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -586,8 +644,11 @@ unicode_script = "devanagari"
 ## आश्रमवर्णनम्
 +++(र५)+++
 
-स दुष्प्रापयशाः प्रापदाश्रमं श्रान्तवाहनः ।  
-सायं सय्ँयमिनस्तस्य महर्षेर्महिषीसखः ॥ ४८ ॥    
+स दुष्प्रापयशाः **प्रापद्**  
+**आश्रमं** श्रान्तवाहनः ।  
+सायं सय्ँयमिनस् तस्य  
+महर्षेर् महिषीसखः ॥ ४८ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/48.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -596,8 +657,11 @@ unicode_script = "devanagari"
 </div>
 
 
-वनान्तरादुपावृत्तैः समित्कुशफलाहरैः ।  
-पूर्यमाणम् अदृश्याग्निप्रत्युद्यातैस् तपस्विभिः ॥ ४९ ॥    
+वनान्तराद् उपावृत्तैः  
+समित्-कुश-फलाहरैः ।  
+**पूर्यमाणम्** +++(आश्रमं)+++ अदृश्याग्नि-  
+प्रत्युद्-यातैस् **तपस्विभिः** ॥ ४९ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/49.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -607,8 +671,11 @@ unicode_script = "devanagari"
 
 +++(कामं पितरं प्रोषितवन्तं पुत्राः प्रत्याधावन्ति। एवमेतमग्नयः प्रत्याधवन्ति। )+++
 
-आकीर्णम् ऋषिपत्नीनाम् उटजद्वाररोधिभिः ।  
-अपत्यैरिव नीवार+++(=तृणधान्य)+++-भागधेयोचितैर् मृगैः ॥ ५० ॥    
+**आकीर्णम्** ऋषि-पत्नीनाम्  
+उटज-द्वार-रोधिभिः ।  
+अपत्यैर् इव नीवार+++(=तृणधान्य)+++-  
+भाग-धेयोचितैर् **मृगैः** ॥ ५० ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/50.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -617,8 +684,11 @@ unicode_script = "devanagari"
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-51-95.mp3"></div>
 
-सेकान्ते मुनिकन्याभिस्तत्क्षणोज्झितवृक्षकम् ।  
-विश्वासाय विहङ्गानाम् आलवालाम्बुपायिनाम् ॥ ५१ ॥    
+सेकान्ते मुनिकन्याभिस्  
+**तत्क्षणोज्झित-वृक्षकम्** ।  
+विश्वासाय विहङ्गानाम्  
+आलवालाम्बुपायिनाम् ॥ ५१ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/51.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -627,8 +697,13 @@ unicode_script = "devanagari"
 </div>
 
 
-आतपाऽऽत्यय+++(=अपगम)+++सङ्क्षिप्तनीवारासु+++(=तृणधान्य)+++ निषादिभिः ।  
-मृगैर् वर्तितरोमन्थम् उटजाङ्गनभूमिषु ॥ ५२ ॥    
+आतपाऽऽत्यय+++(=अपगम)+++सङ्क्षिप्त-  
+नीवारासु+++(=तृणधान्य)+++ निषादिभिः ।  
+**मृगैर् वर्तित-रोमन्थम्**  
+उटजाङ्गन-भूमिषु ॥ ५२ ॥    
+
++++(आतपात्यये किमर्थं सङ्क्षिप्तास् (राशीकृतास्) स्युर् नीवाराः??)+++
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/52.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -637,8 +712,11 @@ unicode_script = "devanagari"
 </div>
 
 
-अभ्युत्थिताग्निपिशुनैरतिथीनाश्रमोन्मुखान् ।  
-पुनानम् पवनोद्धूतैर् धूमैराहुतिगन्धिभिः ॥ ५३ ॥    
+अभ्युत्थिताग्नि-पिशुनैर्  
+अतिथीन् आश्रमोन्मुखान् ।  
+**पुनानम्** पवनोद्धूतैर्  
+**धूमैर्** आहुतिगन्धिभिः ॥ ५३ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/53.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -650,8 +728,11 @@ unicode_script = "devanagari"
 ## मुनि-दर्शनम्
 +++(र५)+++
 
-अथ यन्तारमादिष्य धुर्यान् विश्रमयेति सः ।  
-तामवारोपयत्पत्नीं रथादवततार च ॥ ५४ ॥    
+अथ **यन्तारम् आदिश्य**  
+धुर्यान् विश्रमयेति सः ।  
+ताम् **अवारोपयत् पत्नीं**  
+रथाद् **अवततार** च ॥ ५४ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/54.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -660,8 +741,11 @@ unicode_script = "devanagari"
 </div>
 
 
-तस्मै सभ्याः सभार्याय गोप्त्रे गुप्ततमेन्द्रियाः ।  
-अर्हणाम् अर्हते चक्रुर्मुनयो नयचक्षुषे ॥ ५५ ॥    
+तस्मै सभ्याः सभार्याय  
+गोप्त्रे गुप्ततमेन्द्रियाः ।  
+**अर्हणाम्** अर्हते **चक्रुर्**  
+मुनयो नयचक्षुषे ॥ ५५ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/55.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -670,8 +754,11 @@ unicode_script = "devanagari"
 </div>
 
 
-विधेः सायन्तनस्यान्ते स ददर्श तपोनिधिम् ।  
-अन्वासितम् अरुन्धत्या स्वाहयेव हविर्भुजम् ॥ ५६ ॥    
+विधेः सायन्तनस्यान्ते  
+स **ददर्श तपोनिधिम्** ।  
+अन्वासितम् अरुन्धत्या  
+स्वाहयेव हविर्-भुजम् ॥ ५६ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/56.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -680,8 +767,11 @@ unicode_script = "devanagari"
 </div>
 
 
-तयोर्जगृहतुः पादान् राजा राज्ञी च मागधी ।  
-तौ गुरुर्गुरुपत्नी च प्रीत्या प्रतिननन्दतुः ॥ ५७ ॥    
+तयोर् **जगृहतुः पादान्**  
+राजा राज्ञी च मागधी ।  
+तौ गुरुर्गुरुपत्नी च  
+प्रीत्या **प्रतिननन्दतुः** ॥ ५७ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/57.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -690,8 +780,11 @@ unicode_script = "devanagari"
 </div>
 
 
-तम् आतिथ्यक्रियाशान्तरथक्षोभपरिश्रमम् ।  
-पप्रच्छ कुशलं राज्ये राज्याश्रममुनिम् मुनिः ॥ ५८ ॥    
+तम् आतिथ्य-क्रिया-शान्त- 
+रथ-क्षोभ-परिश्रमम् ।  
+**पप्रच्छ कुशलं** राज्ये  
+राज्याश्रम-मुनिम् मुनिः ॥ ५८ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/58.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -700,8 +793,11 @@ unicode_script = "devanagari"
 </div>
 
 
-अथाऽथर्वनिधेस्तस्य विजितारिपुरः पुरः ।  
-अर्थ्यामर्थपतिर्वाचमाददे वदताव्ँ वरः ॥ ५९ ॥    
+अथाऽथर्वनिधेस् तस्य  
+विजितारिपुरः पुरः ।  
+अर्थ्याम् अर्थपतिर्  
+**वाचम् आददे** वदताव्ँ वरः ॥ ५९ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/59.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -710,8 +806,11 @@ unicode_script = "devanagari"
 </div>
 
 
-उपपन्नन् ननु शिवं सप्तस्वङ्गेषु यस्य मे ।  
-दैवीनाम् मानुषीणाञ् च प्रतिहर्ता त्वम् आपदाम् ॥ ६० ॥    
+**उपपन्नन्** ननु **शिवं**  
+सप्तस्व् अङ्गेषु यस्य मे ।  
+दैवीनाम् मानुषीणाञ् च  
+**प्रतिहर्ता त्वम् आपदाम्** ॥ ६० ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/60.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -720,8 +819,11 @@ unicode_script = "devanagari"
 </div>
 
 
-तव मन्त्रकृतो मन्त्रैर्दूरात्प्रशमितारिभिः ।  
-प्रत्यादिश्यन्त इव मे दृष्टलक्ष्यभिदः शराः ॥ ६१ ॥    
+तव मन्त्रकृतो मन्त्रैर्  
+दूरात् प्रशमितारिभिः ।  
+**प्रत्यादिश्यन्त इव** मे  
+दृष्ट-लक्ष्य-भिदः **शराः** ॥ ६१ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/61.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -730,8 +832,11 @@ unicode_script = "devanagari"
 </div>
 
 
-हविरावर्जितं होतस् त्वया विधिवदग्निषु ।  
-वृष्टिर्भवति सस्यानाम् अवग्रहविशोषिणाम्+++(सतः षष्ठी)+++ ॥ ६२ ॥    
+**हविर् आवर्जितं** होतस्  
+त्वया विधिवद् अग्निषु ।  
+**वृष्टिर् भवति** सस्यानाम्  
+अवग्रह-विशोषिणाम्+++(सतः षष्ठी)+++ ॥ ६२ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/62.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -740,8 +845,11 @@ unicode_script = "devanagari"
 </div>
 
 
-पुरुषायुषजीविन्यो निरातङ्का निरीतयः +++(=निरतिवृष्ट्यादयः)+++।  
-यन्मदीयाः प्रजास् तस्य हेतुस् त्वद्ब्रह्मवर्चसम् ॥ ६३ ॥    
+पुरुषायुष-जीविन्यो  
+**निरातङ्का** निरीतयः +++(=निरतिवृष्ट्यादयः)+++।  
+यन्मदीयाः **प्रजास्**, तस्य  
+हेतुस् त्वद्-ब्रह्म-वर्चसम् ॥ ६३ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/63.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -750,8 +858,11 @@ unicode_script = "devanagari"
 </div>
 
 
-त्वयैवञ् चिन्त्यमानस्य गुरुणा ब्रह्मयोनिना ।  
-सानुबन्धाः कथन् न स्युः सम्पदो मे निरापदः ॥ ६४ ॥    
+त्वयैवञ् चिन्त्य-मानस्य  
+गुरुणा ब्रह्मयोनिना ।  
+**सानुबन्धाः** कथन् न स्युः  
+**सम्पदो** मे निरापदः ॥ ६४ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/64.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -763,8 +874,11 @@ unicode_script = "devanagari"
 ### अभ्यर्थना
 +++(र५)+++
 
-किन् तु वध्वान् तवैतस्याम् अदृष्टसदृशप्रजम् ।  
-न माम् अवति सद्वीपा रत्नसूरपि मेदिनी ॥ ६५ ॥    
+किन् तु वध्वान् तवैतस्याम्  
+अ-दृष्ट-सदृशप्रजम् ।  
+**न माम् अवति** स-द्वीपा  
+रत्नसूरपि **मेदिनी** ॥ ६५ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/65.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -773,8 +887,11 @@ unicode_script = "devanagari"
 </div>
 
 
-नूनम् मत्तः परव्ँ वंश्याः पिण्डविच्छेददर्शिनः ।  
-न प्रकामभुजः श्राद्धे स्वधासङ्ग्रहतत्पराः ॥ ६६ ॥    
+नूनम् मत्तः परव्ँ **वंश्याः**  
+पिण्ड-विच्छेद-दर्शिनः ।  
+**न प्रकाम-भुजः** श्राद्धे  
+स्वधा-सङ्ग्रह-तत्पराः ॥ ६६ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/66.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -783,8 +900,11 @@ unicode_script = "devanagari"
 </div>
 
 
-मत्परन् दुर्लभम् मत्वा नूनम् आवर्जितम् मया ।  
-पयः पूर्वैः स्वनिःश्वासैः कवोष्णम् उपभुज्यते ॥ ६७ ॥    
+मत्-परन् दुर्लभम् मत्वा  
+नूनम् आवर्जितम् मया ।  
+**पयः** पूर्वैः स्वनिःश्वासैः  
+**कवोष्णम् उपभुज्यते** ॥ ६७ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/67.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -793,8 +913,11 @@ unicode_script = "devanagari"
 </div>
 
 
-सोऽहम् इज्याविशुद्धात्मा प्रजालोपनिमीलितः ।  
-प्रकाशश्चाप्रकाशश्च लोकालोक इवाचलः ॥ ६८ ॥    
+**सोऽहम्** इज्या-विशुद्धात्मा  
+प्रजा-लोप-निमीलितः ।  
+**प्रकाशश् चाप्रकाशश् च**  
+लोकालोक इवाचलः ॥ ६८ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/68.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -803,8 +926,11 @@ unicode_script = "devanagari"
 </div>
 
 
-लोकान्तरसुखम् पुण्यन् तपोदानसमुद्भवम् ।  
-सन्ततिः शुद्धवंश्या हि परत्रेह च शर्मणे ॥ ६९ ॥    
+**लोकान्तर-सुखम् पुण्यन्**  
+तपो-दान-समुद्भवम् ।  
+**सन्ततिः** शुद्ध-वंश्या हि  
+**परत्रेह च शर्मणे** ॥ ६९ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/69.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -814,8 +940,11 @@ unicode_script = "devanagari"
 </div>
 
 
-तया हीनव्ँ विधातर्माङ् कथम् पश्यन्न दूयसे ।  
-सिक्तं स्वयम् इव स्नेहाद्वन्ध्यम् आश्रमवृक्षकम् ॥ ७० ॥    
+तया हीनव्ँ विधातर् माङ्  
+कथम् **पश्यन् न दूयसे** ।  
+सिक्तं स्वयम् इव स्नेहाद्  
+वन्ध्यम् आश्रम-वृक्षकम् ॥ ७० ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/70.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -824,8 +953,11 @@ unicode_script = "devanagari"
 </div>
 
 
-असह्यपीडम् भगवन्नृणमन्त्यमवेहि मे ।  
-अरुन्तुदमिवालानमनिर्वाणस्य दन्तिनः ॥ ७१ ॥    
+**असह्यपीडम्** भगवन्न्  
+ऋणम् अन्त्यम् **अवेहि** मे ।  
+अरुन्+++(=मर्म)+++-तुदम् इवालानम्  
+अनिर्वाणस्य दन्तिनः ॥ ७१ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/71.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -834,8 +966,11 @@ unicode_script = "devanagari"
 </div>
 
 
-तस्मान्मुच्ये यथा तात सव्ँविधातुन् तथार्हसि ।  
-इक्ष्वाकूणान् दुरापेऽर्थे त्वदधीना हि सिद्धयः ॥ ७२ ॥    
+**तस्मान् मुच्ये** यथा तात  
+सव्ँविधातुन् तथार्हसि ।  
+इक्ष्वाकूणान् दुरापेऽर्थे  
+त्वदधीना हि सिद्धयः ॥ ७२ ॥    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/72.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
