--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
@@ -3,10 +3,12 @@ title = "०२ नन्दिनी-वर-प्रदानम्"
 unicode_script = "devanagari"
 
 +++
-## परिचयः
+<details><summary>विस्तारः (द्रष्टुं नोद्यम्)</summary>
 
-- मूलम् अत्र श्रूयताम् - [आर्कैवि](https://archive.org/details/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-01-17.mp3)।  
-- मल्लिनाथ-टीका [ऽत्र](https://archive.org/details/raghuvamsha_with_sanjeevini_commentary_of_mallinatha)।  
+- मूलम् अत्र श्रूयताम् - [आर्कैवि](https://archive.org/details/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga01-01-17.mp3) ।  
+- मल्लिनाथ-टीका [ऽत्र](https://archive.org/details/raghuvamsha_with_sanjeevini_commentary_of_mallinatha) ।  
+</details>
+
 
 ## अनुचर्या
 +++(अ५)+++
@@ -15,10 +17,10 @@ unicode_script = "devanagari"
 
 ### दम्पतिभ्याम्
 
-अथ प्रजानामधिपः प्रभाते  
-जायाप्रतिग्राहितगन्धमाल्यम्।  
-वनाय पीतप्रतिबद्धवत्साय्ँ  
-यशोधनो धेनुमृषेर् मुमोच ॥ १ ॥  
+अथ प्रजानाम् **अधिपः** प्रभाते  
+जाया-प्रतिग्राहित-गन्ध-माल्यम्।  
+**वनाय** पीत-प्रतिबद्ध-वत्साय्ँ  
+यशोधनो **धेनुम्** ऋषेर् **मुमोच** ॥ १ ॥  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/01.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -27,10 +29,11 @@ unicode_script = "devanagari"
 </div>
 
 
-तस्याः खुरन्यासपवित्रपांसुम्  
-अपांसुलानान् धुरि कीर्तनीया ।  
-मार्गम् मनुष्येश्वरधर्मपत्नी  
-श्रुतेरिवार्थं स्मृतिरन्वगच्छत् ॥ २ ॥    
+**तस्याः** खुर-न्यास-पवित्र-पांसुम्  
+अपांसुलानान् धुरि कीर्तनीया +++(राज्ञी)+++ ।  
+**मार्गम्** मनुष्येश्वर-धर्मपत्नी  
+श्रुतेर् इवार्थं स्मृतिर् **अन्वगच्छत्** ॥ २ ॥+++(र५ अ५)+++    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/02.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -38,12 +41,11 @@ unicode_script = "devanagari"
 </details>
 </div>
 
-+++(र५ अ५)+++
+**निवर्त्य राजा** दयितान् दयालुस्  
+**तां** सौरभेयीं सुरभिर्+++(=मनोज्ञः)+++ यशोभिः ।  
+पयो-धरी-भूत-चतुः-समुद्राञ् +++(उर्वीं)+++  
+**जुगोप** गोरूप-धराम् इवोर्वीम् ॥ ३ ॥  
 
-निवर्त्य राजा दयितान् दयालुस्  
-तां सौरभेयीं सुरभिर्यशोभिः ।  
-पयोधरीभूतचतुःसमुद्राञ्  
-जुगोप गोरूपधरामिवोर्वीम् ॥ ३ ॥  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/03.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -55,9 +57,10 @@ unicode_script = "devanagari"
 ### व्रतप्रकारः
 
 व्रताय तेनानुचरेण धेनोर्  
-न्यषेधि शेषोऽप्यनुयायिवर्गः ।  
-न चान्यतस्तस्य शरीररक्षा  
-स्ववीर्यगुप्ता हि मनोः प्रसूतिः ॥ ४ ॥    
+**न्यषेधि** शेषो ऽप्य् **अनुयायि-वर्गः** ।  
+न चान्यतस् तस्य शरीर-रक्षा  
+स्व-वीर्य-गुप्ता हि मनोः प्रसूतिः ॥ ४ ॥+++(र५ अ५)+++    
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/04.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -65,12 +68,11 @@ unicode_script = "devanagari"
 </details>
 </div>
 
-+++(र५ अ५)+++
+आस्वादवद्भिः कवलैस् तृणानाङ्,  
+कण्डूयनैर्, दंश-निवारणैश् च ।  
+अव्याहतैस् स्वैर-गतैस् - स तस्याः  
+सम्राट् **समाराधन-तत्-परो ऽभूत्** ॥ ५ ॥ +++(र५ अ५)+++    
 
-आस्वादवद्भिः कवलैस्तृणानाङ्  
-कण्डूयनैर्दंशनिवारणैश्च ।  
-अव्याहतैस् स्वैरगतैस् स तस्याः  
-सम्राट् समाराधनतत्परोऽभूत् ॥ ५ ॥    
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/05.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -78,12 +80,11 @@ unicode_script = "devanagari"
 </details>
 </div>
 
-+++(र५ अ५)+++
+स्थितः स्थिताम्, उच्चलितः प्रयातान्,  
+निषेदुषीम् आसन-बन्ध-धीरः ।  
+जलाभिलाषी जलम् आदधानाञ् -  
+छायेव ताम् **भूपतिर् अन्वगच्छत्** ॥ ६ ॥ +++(र५ अ५)+++    
 
-स्थितः स्थितामुच्चलितः प्रयातान्  
-निषेदुषीमासनबन्धधीरः ।  
-जलाभिलाषी जलमादधानाञ्  
-छायेव ताम् भूपतिरन्वगच्छत् ॥ ६ ॥    
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/06.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -91,14 +92,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
-+++(र५ अ५)+++
-
 ### धीरगतिः
 
-स न्यस्तचिह्नामपि राजलक्ष्मीन्  
-तेजोविशेषानुमितान् दधानः ।  
-आसीद् अनाविष्कृतदानराजिर्  
-अन्तर्मदावस्थ इव द्विपेन्द्रः ॥ ७ ॥  
+स न्यस्त-चिह्नाम् अपि **राज-लक्ष्मीन्**  
+तेजो-विशेषानुमितान् **दधानः** ।  
+**आसीद्** अनाविष्कृत-दानराजिर्  
+अन्तर्-मदावस्थ इव द्विपेन्द्रः ॥ ७ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/07.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -107,10 +107,11 @@ unicode_script = "devanagari"
 </div>
 
 
-लता-प्र-तानो+++(=प्रवालो)+++द्ग्रथितैः स केशैर्  
-अधिज्यधन्वा विचचार दावम्+++(=वनम्)+++ ।  
-रक्षापदेशान्मुनिहोमधेनोर्  
-वन्यान्विनेष्यन्निव दुष्टसत्त्वान् ॥ ८ ॥  
+लता-प्र-तान+++(=प्रवाल)++++उद्ग्रथितैः स केशैर्  
+**अधिज्य-धन्वा विचचार** दावम्+++(=वनम्)+++ ।  
+रक्षापदेशान् मुनि-होम-धेनोर्  
+वन्यान् +++(दुष्टताया)+++ **वि-नेष्यन्न् इव** दुष्ट-सत्त्वान् ॥ ८ ॥ +++(4)+++  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/08.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -121,10 +122,11 @@ unicode_script = "devanagari"
 
 ### वनदेवतापूजा
 
-विसृष्टपार्श्वानुचरस्य तस्य  
-पार्श्वद्रुमाः पाशभृता समस्य ।  
-उदीरयामासुरिवोन्मदानाम्  
-आलोकशब्दव्ँ वयसाव्ँ विरावैः ॥ ९ ॥  
+विसृष्ट-पार्श्वानुचरस्य तस्य  
+**पार्श्व-द्रुमाः** पाश-भृता+++(=वरुणेन)+++ समस्य ।  
+**उदीरयाम् आसुर्** इवोन्मदानाम्  
+**आलोक-शब्दव्ँ** वयसाव्ँ विरावैः ॥ ९ ॥  
+
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/09.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
