--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01.md
@@ -448,7 +448,14 @@ title = "०१"
   
 काप्यभिख्या तयोरासीद्व्रजतोः शुद्धवेषयोः ।  
 हिमनिर्मुक्तयोर्योगे चित्राचन्द्रमसोरिव ॥ 46 ॥  
-कापीति। व्रजतोर्गच्छतोः शुद्धवेषयोरुज्ज्वलनेपथ्ययोः तयोः सुदक्षिणादिलीपयोः। हिमनिर्मुक्तयोश्चित्राचन्द्रमसोरिव। योगे सति काप्यनिर्वाच्याऽभिख्या शोभाऽ।ञसीत्। 'अभिख्या नामशोभयोः' इत्यमरः। 'आतश्चोपसर्गे' (पा.3।3।106) इत्यङ्प्रत्ययः। चित्रा नक्षत्रविशेषः। शिशिरापगमे चैत्र्यां चित्रापूर्णचन्द्रमसोरिवेत्यर्थः ॥ 46 ॥  
+
+<div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/46.md">
+<details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
+
+कापीति। व्रजतोर्गच्छतोः शुद्धवेषयोरुज्ज्वलनेपथ्ययोः तयोः सुदक्षिणादिलीपयोः। हिमनिर्मुक्तयोश्चित्राचन्द्रमसोरिव। योगे सति काप्यनिर्वाच्याऽभिख्या शोभाऽ।ञसीत्। 'अभिख्या नामशोभयोः' इत्यमरः। 'आतश्चोपसर्गे' (पा.3।3।106) इत्यङ्प्रत्ययः। चित्रा नक्षत्रविशेषः। शिशिरापगमे चैत्र्यां चित्रापूर्णचन्द्रमसोरिवेत्यर्थः ॥ 46 ॥
+</details>
+</div>
+
 तत्तद्भूमिपतिः पत्न्यै दर्शयन्प्रियदर्शनः ।  
 अपि लङ्घितमध्वानं बुबुधे न बुधोपमः ॥ 47 ॥  
 <div class="js_include" includetitle="true" newlevelforh1="4" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/47.md">
